--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <a href="intent://com.altrthink.fivy/#intent;scheme=fivy;end">テスト</a>
+  <a href="intent://com.altrthink.fivy/#intent;scheme=fivy;package=com.altrthink.fivy;end">テスト</a>
 </body>
 </html>
