--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <a href="intent://com.altrthink.fivy/#intent;scheme=fivy;package=com.altrthink.fivy;end">テスト</a>
-  <br />
-  <a href="fivy://com.altrthink.fivy/">テスト2</a>
+  <a href="fivy://com.altrthink.fivy/">URLスキームテスト</a>
 </body>
 </html>
