--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <meta charset="utf-8">
 </head>
 <body>
-  <a href="fivy://com.altrthink.fivy/">URLスキームテスト</a>
+  <a href="with://campaigns/53">URLスキームテスト</a>
 </body>
 </html>
