--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <a href="with://campaigns/53">URLスキームテスト</a>
-  <a href="intent://with\://campaigns/53#Intent;scheme=http;package=com.android.chrome;end">URLスキームテスト2</a>
+  <a href="intent://campaigns/53#Intent;scheme=with;package=com.android.chrome;end">URLスキームテスト2</a>
 </body>
 </html>
