--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <a href="with://campaigns/53">URLスキームテスト</a>
-  <a href="intent://with.is/callback/deep_link/campaign/38#Intent;scheme=https;package=com.android.chrome;end">URLスキームテスト2</a>
+  <a href="with://close">とじる</a>
+  <a href="with://browser?url=https://with.is/callback/deep_link/campaign/38">ディープリンクテスト</a>
+  <a href="with://browser?url=with://campaigns/53">URLスキームテスト</a>
 </body>
 </html>
