--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <a href="with://campaigns/53">URLスキームテスト</a>
   <a href="with://close">とじる</a>
-  <a href="with://browser?url=https://with.is/callback/deep_link/campaign/38">ディープリンクテスト</a>
+  <a href="with://browser?url=https://loki.with.is/callback/deep_link/campaign/38">ディープリンクテスト</a>
   <a href="with://browser?url=with://campaigns/53">URLスキームテスト</a>
 </body>
 </html>
